feat: added html and styles

--- a/stopwatch/styles.css
+++ b/stopwatch/styles.css
@@ -22,7 +22,7 @@ h1{
     background-color: white;
 }
 
-#timer{
+#display{
     font-size: 4rem;
     font-weight: bold;
     color: rgb(67, 66, 66);
