--- a/chrome-extension-lead-tracker/styles.css
+++ b/chrome-extension-lead-tracker/styles.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 16px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 input{
@@ -24,4 +25,18 @@ button{
 
 button:hover{
     background-color: #538139;
+}
+
+ul{
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+li{
+    margin-bottom: 5px;
+}
+
+li a{
+    color: #5f9341;
 }
